--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -1,7 +1,7 @@
 
-@import "functions";
+@import "../../../node_modules/bootstrap/scss/functions";
 @import "./variables";
-@import "bootstrap";
+@import "../../../node_modules/bootstrap/scss/bootstrap";
 
 @import "index";
-@import "layout"
+@import "layout";
