--- a/app/assets/style/_layout.scss
+++ b/app/assets/style/_layout.scss
@@ -4,9 +4,9 @@
   color: red;
 }
 
-footer {
-  background:  #121212 0% 0% no-repeat ;
-  padding-top: 32px;
-  padding-bottom: 32;
-  color: white;
-}
+// footer {
+//   // background:  #121212 0% 0% no-repeat ;
+//   // padding-top: 32px;
+//   // padding-bottom: 32;
+//   // color: white;
+// }
