--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -20,7 +20,7 @@
   <!-- 輪播 -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.4.1/js/swiper.min.js"></script>
   <!-- 主要的 JS -->
-  <script src="./assets/js/all.js"></script>
+  <!-- <script src="./assets/js/all.js"></script> -->
 </head>
 
 <body>
@@ -51,13 +51,13 @@
   <%- contents %>
 
   <!-- 頁尾 -->
-  <footer>
+  <footer class="my-5 bg-dark py-5">
     <div class="container roboto">
       <div class="row">
         <div class="col-12 d-lg-flex justify-content-lg-between">
           <div class="d-lg-flex">
             <h4 class="raleway mainLogo"><a href="index.html" class="pr-3 text-light">Craftsman</a></h4>
-            <p class="d-none d-lg-block mt-1 display-5 text-light">© 2020. All Rights Reserved.</p>
+            <p class="mt-1 display-5 text-light">© 2020. All Rights Reserved.</p>
           </div>
 
           <ul class="d-flex flex-column flex-lg-row">
