--- a/app/assets/style/_variables.scss
+++ b/app/assets/style/_variables.scss
@@ -75,8 +75,10 @@ $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
-$light:         $gray-700 !default;
-$dark:          $gray-800 !default;
+// $light:         $gray-700 !default;
+$light:         $white !default;
+// $dark:          $gray-800 !default;
+$dark:          $black !default;
 
 $theme-colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
@@ -88,8 +90,9 @@ $theme-colors: map-merge(
     "info":       $info,
     "warning":    $warning,
     "danger":     $danger,
-    "light":      $gray-700 ,
-    "dark":       $dark,
+    // "light":      $gray-700 ,
+    "light":      $white ,
+    "dark":       $black,
   ),
   $theme-colors
 );
@@ -149,7 +152,11 @@ $spacers: map-merge(
     2: ($spacer * .5),
     3: $spacer,
     4: ($spacer * 1.5),
-    5: ($spacer * 3)
+    5: ($spacer * 2),
+    6: ($spacer * 2.5),
+    7:	($spacer * 3),
+    8:	($spacer * 3.5),
+    9:($spacer * 4)
   ),
   $spacers
 );
