--- a/app/assets/style/_layout.scss
+++ b/app/assets/style/_layout.scss
@@ -4,9 +4,17 @@
   color: red;
 }
 
-// footer {
-//   // background:  #121212 0% 0% no-repeat ;
-//   // padding-top: 32px;
-//   // padding-bottom: 32;
-//   // color: white;
-// }
+.Subscribe {
+  
+  // margin-bottom: 200px;
+  background: url(../images/tom-crew-uDF1mW7EUwM-unsplash.jpg) center no-repeat;
+  background-size: cover;
+}
+
+.offers{
+  padding-top: 84px;
+}
+
+.doSubscribe{
+  margin-bottom: 84px;
+}
