--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -50,8 +50,27 @@
 
   <%- contents %>
 
+  <section class="Subscribe">
+    <div class="container">
+      <div class="col-5 d-lg-flex offers mb-7">
+          <h1>Subscribe for news and special offers!</h>
+      </div>
+      
+      <div class="col-5 d-lg-flex">
+        <form class="input-group ">
+          <input type="email" class="form-control" placeholder="Your email address" aria-label="Your email address" aria-describedby="button-addon2">
+          <div class="doSubscribe">
+            <input class="btn btn-success" type="button" id="button-addon2" value="Subscribe">
+          </div>
+        </form>
+    </div>
+
+    </div>
+  </section>
+
+
   <!-- 頁尾 -->
-  <footer class="my-5 bg-dark py-5">
+  <footer class="py-4 bg-dark ">
     <div class="container roboto">
       <div class="row">
         <div class="col-12 d-lg-flex justify-content-lg-between">
