--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-  <!-- 頁首 -->
+  <!-- 共同首頁 -->
   <div class="header container">
     <div class="row mt-4">
       <div class="col-6 d-flex justify-content-center justify-content-lg-start">
@@ -34,7 +34,7 @@
       <div class="col-6 d-flex justify-content-end align-items-center ">
         <div class="headerLink">
           <div class="d-flex justify-content-end align-items-center roboto">
-            <h5 class="mx-4 "><a href="#" class="text-light">Product</a></h5>
+            <h5 class="mx-4 "><a href="#" class="hyperTag">Product</a></h5>
             <h5 class="mx-4 "><a href="#">Blog</a></h5>
             <h5 class="mx-4 "><a href="#">Contact</a></h3>
             <a href="#" class="cart ml-4 "><span class="material-icons" data-toggle="modal" data-target="#exampleModal">shopping_cart</span></a>
@@ -52,11 +52,11 @@
 
   <section class="Subscribe">
     <div class="container">
-      <div class="col-5 d-lg-flex offers mb-7">
+      <div class="col-5 d-flex offers mb-7">
           <h1>Subscribe for news and special offers!</h>
       </div>
       
-      <div class="col-5 d-lg-flex">
+      <div class="col-5 d-flex">
         <form class="input-group ">
           <input type="email" class="form-control" placeholder="Your email address" aria-label="Your email address" aria-describedby="button-addon2">
           <div class="doSubscribe">
@@ -69,12 +69,12 @@
   </section>
 
 
-  <!-- 頁尾 -->
+  <!-- 共同頁尾 -->
   <footer class="py-4 bg-dark ">
     <div class="container roboto">
       <div class="row">
-        <div class="col-12 d-lg-flex justify-content-lg-between">
-          <div class="d-lg-flex">
+        <div class="col-12 d-flex justify-content-lg-between">
+          <div class="d-flex">
             <h4 class="raleway mainLogo"><a href="index.html" class="pr-3 text-light">Craftsman</a></h4>
             <p class="mt-1 display-5 text-light">© 2020. All Rights Reserved.</p>
           </div>
@@ -90,15 +90,15 @@
   </footer>
 
   <!-- 外加js -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+  <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+    crossorigin="anonymous"></script> -->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
     integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+    crossorigin="anonymous"></script> -->
+  <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
     integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script> -->
 </body>
 
 </html>
