--- a/app/assets/style/_layout.scss
+++ b/app/assets/style/_layout.scss
@@ -4,17 +4,103 @@
   color: red;
 }
 
-.Subscribe {
-  
-  // margin-bottom: 200px;
-  background: url(../images/tom-crew-uDF1mW7EUwM-unsplash.jpg) center no-repeat;
-  background-size: cover;
+.hyperTag {
+  color: #ffffff;
 }
 
-.offers{
+.hyperTag2 {
+  color:#FFFFFF99;
+}
+
+.Subscribe {
+  background: url(../images/tom-crew-uDF1mW7EUwM-unsplash.jpg) center no-repeat;
+  background-size: cover; 
+}
+
+.lifeStyleSet {
+  padding-top: 183px;
+
+  h4 {
+    color: #0000009a;
+  }
+}
+
+
+.lifeStyleBg {
+  background: url(../images/tom-crew-5HRCkrSs9Dk-unsplash.jpg) center no-repeat;
+  // position: absolute;
+  top: -30px;
+  bottom: 0;
+  background-size: cover;
+  width: 100%;
+  height:800px;
+}
+
+.offers {
   padding-top: 84px;
 }
 
-.doSubscribe{
+.doSubscribe {
   margin-bottom: 84px;
+}
+
+.featuresTxtColorGreen{
+  color:#0E8A00
+}
+
+.mt121{
+  margin-top: 121px;
+}
+
+.pr125{
+  padding-right: 125px;
+}
+
+.pl125{
+  padding-left: 125px;
+}
+
+.mt150{
+  margin-top: 150px;
+}
+
+.craftsBg{
+  padding-top: 200px;
+  padding-bottom: 200px;
+  background: url(../images/burningparrot-u2Xn5Bzvllw-unsplash.jpg) center no-repeat;
+  background-size: cover;
+}
+
+
+.socialMedia{
+  font-size: 14px;
+  display: inline-table;
+
+  a{
+    color:#0E8A00;
+  }
+}
+
+.onsaleTxt{
+  display: inline-table;
+  color:#121212;
+}
+
+.onsaleTxtStrike{
+  display: inline-table;
+  color :#00000062;
+  text-decoration: line-through;
+}
+
+.imgSize{
+  width: 350px;
+  height: 350px;
+}
+
+.resetCards{
+  border: 0px;
+}
+
+.card-body{
+  padding: 0px;
 }
