--- a/app/assets/style/_variables.scss
+++ b/app/assets/style/_variables.scss
@@ -144,7 +144,7 @@ $enable-deprecation-messages:                 true !default;
 
 $spacer: 1rem !default;
 $spacers: () !default;
-// stylelint-disable-next-line scss/dollar-variable-default
+// stylelint-disable-next-line scss/dollar-variable-default  客製
 $spacers: map-merge(
   (
     0: 0,
@@ -156,7 +156,8 @@ $spacers: map-merge(
     6: ($spacer * 2.5),
     7:	($spacer * 3),
     8:	($spacer * 3.5),
-    9:($spacer * 4)
+    9: ($spacer * 4),
+    10: ($spacer * 4.5) //客製
   ),
   $spacers
 );
