--- a/app/assets/style/_project_set.scss
+++ b/app/assets/style/_project_set.scss
@@ -1,12 +1,28 @@
-
 .material-icons {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .raleway {
-    font-family: 'Raleway', sans-serif;
+  font-family: 'Raleway', sans-serif;
 }
 
 .roboto {
-    font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif;
+}
+
+// 推擠未歸類
+.mt121 {
+  margin-top: 121px;
+}
+
+.pr125 {
+  padding-right: 125px;
+}
+
+.pl125 {
+  padding-left: 125px;
+}
+
+.mt150 {
+  margin-top: 150px;
 }
