--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -10,7 +10,9 @@
   <!-- Googl Font -->
   <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,900&display=swap" rel="stylesheet">
   <!-- Material Icon -->
-  <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
+    rel="stylesheet">
   <!-- 輪播 -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.4.1/css/swiper.min.css">
   <!-- 主要的 CSS -->
@@ -25,68 +27,70 @@
 
 <body>
   <!-- 共同首頁 -->
-  <div class="header container">
-    <div class="row mt-4">
-      <div class="col-6 d-flex justify-content-center justify-content-lg-start">
-        <h4 class="raleway mb-0"><a href="index.html" >Craftsman</a></h4>
-      </div>
+  <div class="header">
+    <div class="container">
+      <div class="row">
+        <div class="col-6 my-4">
+          <h4 class="raleway mb-0"><a href="index.html">Craftsman</a></h4>
+        </div>
 
-      <div class="col-6 d-flex justify-content-end align-items-center ">
-        <div class="headerLink">
-          <div class="d-flex justify-content-end align-items-center roboto">
-            <h5 class="mx-4 "><a href="#" class="hyperTag">Product</a></h5>
-            <h5 class="mx-4 "><a href="#">Blog</a></h5>
-            <h5 class="mx-4 "><a href="#">Contact</a></h3>
-            <a href="#" class="cart ml-4 "><span class="material-icons" data-toggle="modal" data-target="#exampleModal">shopping_cart</span></a>
+        <div class="col-6 my-4 ">
+          <div class="headerLink">
+            <div class="d-flex justify-content-end ">
+              <h5 class="mx-4 "><a href="#" class="hyperTag">Product</a></h5>
+              <h5 class="mx-4 "><a href="#" class="hyperTag">Blog</a></h5>
+              <h5 class="mx-4 "><a href="#" class="hyperTag">Contact</a></h3>
+                <a href="#" class="cart ml-4 hyperTag"><span class="material-icons" data-toggle="modal"
+                    data-target="#exampleModal">shopping_cart</span></a>
+            </div>
           </div>
         </div>
       </div>
-
     </div>
   </div>
 
-
-
-
   <%- contents %>
-
-  <section class="Subscribe">
-    <div class="container">
-      <div class="col-5 d-flex offers mb-7">
+  
+  <section class="SubscribeArea">
+    <div class="container Subscribe">
+      <div class="row flex-column">
+        <div class="col-5 offers mb-7">
           <h1>Subscribe for news and special offers!</h>
-      </div>
-      
-      <div class="col-5 d-flex">
-        <form class="input-group ">
-          <input type="email" class="form-control" placeholder="Your email address" aria-label="Your email address" aria-describedby="button-addon2">
-          <div class="doSubscribe">
-            <input class="btn btn-success" type="button" id="button-addon2" value="Subscribe">
-          </div>
-        </form>
-    </div>
+        </div>
 
+        <div class="col-5 ">
+          <form class="input-group ">
+            <input type="email" class="form-control" placeholder="Your email address" aria-label="Your email address"
+              aria-describedby="button-addon2">
+            <div class="doSubscribe">
+              <input class="btn btn-success" type="button" id="button-addon2" value="Subscribe">
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
   </section>
 
 
   <!-- 共同頁尾 -->
-  <footer class="py-4 bg-dark ">
+  <footer>
     <div class="container roboto">
-      <div class="row">
+      <div class="row py-4 bg-dark">
         <div class="col-12 d-flex justify-content-lg-between">
+
           <div class="d-flex">
             <h4 class="raleway mainLogo"><a href="index.html" class="pr-3 text-light">Craftsman</a></h4>
             <p class="mt-1 display-5 text-light">© 2020. All Rights Reserved.</p>
           </div>
 
           <ul class="d-flex flex-column flex-lg-row">
-            <li class="d-flex align-items-lg-center mx-4"><a href="#" class="text-light">Purchase Policy</a></li>
-            <li class="d-flex align-items-lg-center mx-4"><a href="#" class="text-light">Privacy Policy</a></li>
-            <li class="d-flex align-items-lg-center ml-4"><a href="#" class="text-light">Terms &amp; Conditions</a></li>
+            <li class="d-flex align-items-center mx-4"><a href="#" class="text-light">Purchase Policy</a></li>
+            <li class="d-flex align-items-center mx-4"><a href="#" class="text-light">Privacy Policy</a></li>
+            <li class="d-flex align-items-center ml-4"><a href="#" class="text-light">Terms &amp; Conditions</a></li>
           </ul>
         </div>
       </div>
-    </div> 
+    </div>
   </footer>
 
   <!-- 外加js -->
