--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -28,10 +28,10 @@
 
         <div class="col-6 my-4 ">
           <div class="headerLink">
-            <div class="d-flex justify-content-end ">
-              <h5 class="mx-4 "><a href="#" class="hyperTag">Product</a></h5>
-              <h5 class="mx-4 "><a href="#" class="hyperTag">Blog</a></h5>
-              <h5 class="mx-4 "><a href="#" class="hyperTag">Contact</a></h3>
+            <div class="d-flex justify-content-end">
+              <h5 class="mx-4 hyperTag"><a href="#">Product</a></h5>
+              <h5 class="mx-4 hyperTag"><a href="#">Blog</a></h5>
+              <h5 class="mx-4 hyperTag"><a href="#">Contact</a></h3>
                 <a href="#" class="cart ml-4 hyperTag"><span class="material-icons" data-toggle="modal"
                     data-target="#exampleModal">shopping_cart</span></a>
             </div>
